--- a/css/style.css
+++ b/css/style.css
@@ -395,3 +395,9 @@ img {
   color: var(--primary-white-color);
   cursor: pointer;
 }
+
+.header-list-contact-icon {
+  width: 16px;
+  height: 12px;
+  margin-right: 11px;
+}
