--- a/css/style.css
+++ b/css/style.css
@@ -396,7 +396,7 @@ img {
   cursor: pointer;
 }
 
-.header-list-contact-icon {
+.link-contact .header-list-mail-icon {
   width: 16px;
   height: 12px;
   margin-right: 11px;
