--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,11 @@ p {
   text-align: center;
   max-width: 1600px;
   margin: 0 auto;
+  background-image: linear-gradient(
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(../images/header-background.jpg);
 }
 .container {
   width: 1200px;
